# Prellblock

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  README.md  docker-compose.yml  generate_certificate.sh  run.sh  rustfmt.toml
.devcontainer/: devcontainer.json
balise/: Cargo.toml
balise/src/: address.rs  error.rs  lib.rs  macros.rs  server.rs  stream.rs
balise/src/client/: connection_pool.rs  mod.rs  stream_impl_tcp.rs  stream_impl_tls.rs
benchmarking/: benchmark.sh  docker-compose.yml  tps.plt
benchmarking/grafana/config/: grafana.ini
benchmarking/grafana/config/dashboards/: dashboard.yml  prellblock.json
benchmarking/grafana/config/datasources/: datasources.yml
benchmarking/grafana/data/grafana/: grafana.db
benchmarking/prometheus/config/: prometheus.rules.yml  prometheus.yml
blocks/percy/: snap.000000000000007E
blocks/test-prellblock/: db
blocksberg/: Cargo.toml
blocksberg/src/: lib.rs  serde.rs
c-client/: .gitignore  Makefile  client.cpp
certificates/: generate_certificate.sh
client/: Cargo.toml
client-api/: Cargo.toml
client-api/src/: lib.rs  message.rs
client/src/: client.rs  lib.rs  main.rs
config/: accounts.example.yaml  accounts.template.example.yaml  accounts.yaml  config.toml  config_docker.toml  config_els.toml  config_odroid.toml  genesis.yaml  subscription_config.toml  test-permissions.yaml
config/alice/: alice.toml
config/bob/: bob.toml
config/carol/: carol.toml
config/dave/: dave.toml
config/edward/: edward.toml
config/emily/: emily.toml
config/frank/: frank.toml
config/genesis/: genesis.yaml
config/gordon/: gordon.toml
config/heidi/: heidi.toml
config/ivan/: ivan.toml
config/james/: james.toml
config/nia/: nia.toml
config/percy/: percy.toml
config/rebecca/: rebecca.toml
config/thomas/: thomas.toml
genesis-wizard/: Cargo.toml  README.md
genesis-wizard/src/: accounts.rs  certificates.rs  main.rs  templates.rs  util.rs
genesis-wizard/src/accounts/: mod.rs  reading_rights.rs
pinxit/: Cargo.toml  expanded.rs
pinxit/src/: error.rs  identity.rs  lib.rs  macros.rs  peer_id.rs  signable.rs  signature.rs
prellblock/: Cargo.toml
prellblock-client/: Cargo.toml  README.md  cbindgen.toml  prellblock-client.h
prellblock-client-api/: Cargo.toml
prellblock-client-api/src/: account.rs  account_permissions.rs  lib.rs
prellblock-client-api/src/consensus/: block.rs  block_number.rs  leader_term.rs  mod.rs  signature_list.rs
prellblock-client/examples/: poll_rpu.rs  temperature_generator.rs
prellblock-client/src/: client.rs  ffi.rs  lib.rs  main.rs
prellblock-client/src/cli/: config.rs  mod.rs  options.rs  subscriptions.rs
prellblock-client/src/ffi/: error.rs  mod.rs  prelude.rs
prellblock/src/: batcher.rs  data_broadcaster.rs  data_storage.rs  lib.rs  main.rs  permission_checker.rs  prometheus.rs  reader.rs  thread_group.rs  time.rs  transaction_checker.rs  turi.rs  util.rs  world_state.rs
prellblock/src/api/: client.rs  mod.rs  server.rs
prellblock/src/block_storage/: error.rs  mod.rs
prellblock/src/consensus/: block.rs  block_number.rs  mod.rs  signature_list.rs  transaction_applier.rs
prellblock/src/consensus/praftbft/: censorship_checker.rs  core.rs  error.rs  flatten_vec.rs  follower.rs  leader.rs  message.rs  mod.rs  notify.rs  queue.rs  ring_buffer.rs  state.rs  synchronizer.rs  view_change.rs
prellblock/src/consensus/praftbft/follower/: mod.rs  state.rs  stateful_validation.rs  synchronizer.rs
prellblock/src/consensus/praftbft/message/: message.rs  mod.rs  request.rs  response.rs  signable.rs
prellblock/src/consensus/praftbft/view_change/: mod.rs  state.rs
prellblock/src/consensus/thingsboard/: docker-compose.yml  readme.md
prellblock/src/data_storage/: mod.rs
prellblock/src/datastorage/: mod.rs
prellblock/src/peer/: calculator.rs  message.rs  mod.rs  peer_inbox.rs  receiver.rs  sender.rs
prellblock/src/subscriptions/: error.rs  mod.rs  subscription_manager.rs
prellblock/src/subscriptions/exporter/: mod.rs  thingsboard.rs
prellblock/src/thingsboard/: README.md  error.rs  mod.rs  readme.md  subscription_manager.rs  subscriptions.rs
prellblock/src/world_state/: account.rs  mod.rs
prellblock/tests/: prellblock.rs  test-identity.pfx
