[package]
name = "balise"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"

[features]
client = []
server = []
tls = ["native-tls"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.8"
native-tls = { version = "0.2", optional = true }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
tokio = { version = "0.2.19", features = ["rt-core", "io-util", "tcp", "sync"] }
tokio-tls = "0.3.0"

[dev-dependencies]
tokio = { version = "0.2.19", features = ["macros"] }
