[package]
name = "balise"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"

[features]
client = []
server = []
tls = ["native-tls"]

[dependencies]
err-derive = "0.2.4"
lazy_static = "1.4.0"
log = "0.4.8"
native-tls = { version = "0.2", optional = true, features = ["vendored"] }
postcard = { version = "0.5.0", git = "https://github.com/felix-gohla/postcard.git#master", features = ["use-std"] }
serde = { version = "1.0.105", features = ["derive"] }
tokio = { version = "0.2.19", features = ["rt-core", "io-util", "tcp", "sync", "fs"] }
tokio-tls = "0.3.0"

[dev-dependencies]
tokio = { version = "0.2.19", features = ["macros"] }
