[package]
name = "pinxit"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"

[dependencies]
ed25519-dalek = "1.0.0-pre.3"
err-derive = "0.2.3"
hex = "0.4.2"
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
