[package]
name = "pinxit"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek", branch = "develop", features = ["batch"] }
err-derive = "0.2.3"
hexutil = "0.1.0"
lazy_static = "1.4.0"
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
