[package]
name = "prellblock-client-api"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"

[dependencies]
balise = { path = "../balise" }
pinxit = { path = "../pinxit" }
postcard = "0.5.0"
serde = { version = "1.0.105", features = ["derive"] }
