[package]
name = "prellblock-client-api"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"

[dependencies]
balise = { path = "../balise" }
chrono = { version = "0.4.11", features = ["serde"] }
newtype-enum = "0.1.0"
pinxit = { path = "../pinxit" }
postcard = { version = "0.5.0", git = "https://github.com/felix-gohla/postcard.git#master", features = ["use-std"] }
serde = { version = "1.0.105", features = ["derive"] }
