[package]
name = "prellblock-client-api"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
balise = { path = "../balise" }
blake2 = "0.8.1"
chrono = { version = "0.4.11", features = ["serde"] }
hexutil = "0.1.0"
newtype-enum = "0.1.0"
pinxit = { path = "../pinxit" }
postcard = { version = "0.5.0", git = "https://github.com/felix-gohla/postcard.git", rev = "d9bdfe2b", features = ["use-std"] }
serde = { version = "1.0.105", features = ["derive"] }
