[package]
name = "prellblock-client"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"

[dependencies]
balise = { path= "../balise", features = ["client", "tls"] }
prellblock-client-api = { path = "../prellblock-client-api" }
log = "0.4.8"
pretty_env_logger = "0.4.0"
structopt = "0.3.12"
pinxit = { path = "../pinxit" }
serde_json = "1.0.51"
toml = "0.5.6"
serde = { version = "1.0.105", features = ["derive"] }
rand = "0.7.3"
