[package]
name = "prellblock-client"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"

[dependencies]
balise = { path= "../balise", features = ["client", "tls"] }
hex = "0.4.2"
log = "0.4.8"
newtype-enum = "0.1.0"
pinxit = { path = "../pinxit" }
postcard = "0.5.0"
prellblock-client-api = { path = "../prellblock-client-api" }
pretty_env_logger = "0.4.0"
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
structopt = "0.3.12"
tokio = { version = "0.2.19", features = ["rt-threaded", "macros"] }
toml = "0.5.6"
