[package]
name = "prellblock"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"

[dependencies]
balise = { path = "../balise", features = ["server", "client", "tls"] }
bincode = "1.2.1"
blake2 = "0.8.1"
blocksberg = { path = "../blocksberg" }
chrono = {version = "0.4.11", features = ["serde"]}
err-derive = "0.2.3"
futures = "0.3.4"
lazy_static = "1.4.0"
log = "0.4.8"
pinxit = { path = "../pinxit" }
prellblock-client-api = { path = "../prellblock-client-api" }
pretty_env_logger = "0.4.0"
rand = "0.7.3"
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.51"
serde_yaml = "0.8.11"
sled = { version = "0.31.0", features = ["compression"] }
structopt = "0.3.12"
tokio = { version = "0.2.19", features = ["rt-threaded", "macros", "time"] }
toml = "0.5.6"
