[package]
name = "prellblock"
version = "0.1.0"
authors = [
    "Benedikt Schenkel <benedikt.schenkel@student.hpi.de>",
    "Felix Gohla <felix.gohla@student.hpi.de>",
    "Malte Andersch <malte.andersch@student.hpi.de>",
    "Martin Michaelis <code@mgjm.de>",
]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
balise = { path = "../balise", features = ["server", "client", "tls"] }
err-derive = "0.2.3"
futures = "0.3.4"
hexutil = "0.1.0"
im = { version = "14.3.0", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.8"
newtype-enum = "0.1.0"
pinxit = { path = "../pinxit" }
postcard = { version = "0.5.0", git = "https://github.com/felix-gohla/postcard.git", rev = "d9bdfe2b", features = ["use-std"] }
prellblock-client-api = { path = "../prellblock-client-api" }
pretty_env_logger = "0.4.0"
rand = "0.7.3"
rayon = "1.1"
serde = { version = "1.0.105", features = ["derive", "rc"] }
serde_yaml = "0.8.13"
slab = "0.4.2"
sled = { version = "0.31.0", features = ["compression"] }
structopt = "0.3.12"
tokio = { version = "1.2.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
toml = "0.5.6"
